--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.jpa.show-sql= true
 
 
-#spring.datasource.url= jdbc:mysql://remotemysql.com:3306/zFcCMvcx1p
-#spring.datasource.username= zFcCMvcx1p
-#spring.datasource.password=qj1QS3sexX
+spring.datasource.url= jdbc:mysql://remotemysql.com:3306/zFcCMvcx1p
+spring.datasource.username= zFcCMvcx1p
+spring.datasource.password=qj1QS3sexX
 
-spring.datasource.url= jdbc:mysql://localhost:3306/projectmanagement
-spring.datasource.username= root
-spring.datasource.password=manivannan
+#spring.datasource.url= jdbc:mysql://localhost:3306/
+#spring.datasource.username= 
+#spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
