--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.jpa.show-sql= true
 
 
-spring.datasource.url= jdbc:mysql://sql12.freemysqlhosting.net:3306/sql12324049
-spring.datasource.username= sql12324049
-spring.datasource.password=A5LeqYzgWw
+#spring.datasource.url= jdbc:mysql://sql12.freemysqlhosting.net:3306/sql12324049
+#spring.datasource.username= sql12324049
+#spring.datasource.password=A5LeqYzgWw
+
+spring.datasource.url= jdbc:mysql://remotemysql.com:3306/zFcCMvcx1p
+spring.datasource.username= zFcCMvcx1p
+spring.datasource.password=qj1QS3sexX
 
 #spring.datasource.url= jdbc:mysql://localhost:3306/
 #spring.datasource.username= 
